# imooc-django

./: .gitignore  pyproject.toml
tests/: conftest.py  test_basic_setup.py  test_setup_validation.py
